@startuml

title __BUILDER's Class Diagram__\n

  namespace com.other.builder {
    class com.other.builder.BuilderDemo {
        {static} - logger : Log
        {static} + main()
    }
  }
  

  namespace com.other.builder {
    class com.other.builder.Computer {
        - cpu : String
        - disk : String
        - memory : String
        + getCpu()
        + getDisk()
        + getMemory()
        + setCpu()
        + setDisk()
        + setMemory()
    }
  }
  

  namespace com.other.builder {
    interface com.other.builder.ComputerBuilder {
        {abstract} + buildComputer()
        {abstract} + buildCpu()
        {abstract} + buildDisk()
        {abstract} + buildMemory()
    }
  }
  

  namespace com.other.builder {
    class com.other.builder.ComputerConcreteBuilder {
        {static} - logger : Log
        + ComputerConcreteBuilder()
        + buildComputer()
        + buildCpu()
        + buildDisk()
        + buildMemory()
    }
  }
  

  namespace com.other.builder {
    class com.other.builder.ComputerDirector {
        + constructComputer()
    }
  }
  

  com.other.builder.ComputerDirector ..> com.other.builder.ComputerBuilder
  com.other.builder.BuilderDemo ..> com.other.builder.ComputerDirector
  com.other.builder.ComputerConcreteBuilder .up.|> com.other.builder.ComputerBuilder
  com.other.builder.ComputerConcreteBuilder o-- com.other.builder.Computer : computer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
